--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InicioSesion"></activity>
+        <activity android:name=".InicioSesion" />
+        <activity android:name=".RegistrarUsuario" />
+        <activity android:name=".EditarPerfil" />
+        <activity android:name=".NuevoProducto" />
+        <activity android:name=".TodosProductos"></activity>
     </application>
 
 </manifest>
