Codigo del examen Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".EditarPerfil" />
         <activity android:name=".NuevoProducto" />
         <activity android:name=".TodosProductos" />
-        <activity android:name=".TodosUsuarios"></activity>
+        <activity android:name=".TodosUsuarios" />
+        <activity android:name=".TodosFavoritos"></activity>
     </application>
 
 </manifest>
